@@ -4513,3 +4513,5 @@
 20130519 Makefile.am,hacking/Makefile.am,sound/Makefile.am,ui/wii/Makefile.am:
          distribute PORTING,hacking/valgrind.supp,sound/wiisound.c,
          ui/wii/wiimouse.h (Stuart).
+20130526 Makefile.am,ui/win32/installer/fuse.nsi.in: distribute ChangeLog and
+         build notes in Windows packages (Sergio).
